plugins/kotlin/idea/tests/testData/multiplatform/duplicateActualsExplicit/top/top.kt
package foo

expect class <!AMBIGUOUS_ACTUALS, LINE_MARKER("descr='Has actuals in [bottom, middle] modules'; targets=[(text=bottom); (text=middle)]")!>A<!>
